# 2024CPPLab

./: Board.cpp  Board.h  C++Lab.sln  C++Lab3.vcxproj  C++Lab3.vcxproj.filters  CMakeLists.txt  GameData.cpp  GameData.h  Input.cpp  Input.h  Main.cpp  Makefile  README.md
tests/: test_gamedata.cpp
x64/Debug/: C++Lab.exe.recipe  C++Lab.ilk  C++Lab3.exe.recipe  C++Lab3.ilk  C++Lab3.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/C++Lab.tlog/: C++Lab.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/C++Lab3.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
